setup of external js file in transfer repo

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -39,7 +39,7 @@
     </div>
   </nav>
 
-  <div class="card text-white bg-secondary mb-3" style="max-width: 35rem;">
+  <div class="card text-white bg-secondary mb-3" style="max-width: 35rem">
     <div class="card-header text-center bg-dark">Check Availavility..</div>
     <div class="card-body">
       <form action="#" class="form container-fluid" id="#">
@@ -81,7 +81,7 @@
               <option selected value="#">Select Branch</option>
               <option value="1">Ranchi</option>
               <option value="2">Bokaro</option>
-              <option value="3"> JamshedPur</option>
+              <option value="3">JamshedPur</option>
             </select>
             <label for="exampleFormcontrolInput2" class="form-label"
               >Enter Number of Students</label
@@ -102,5 +102,6 @@
         </div>
       </form>
     </div>
+    <button onclick="headerjs()" class="btn btn-primary"> Click me to alert..</button>
   </div>
 </header>
