complition of form validation in javascript

--- a/src/app/pages/upload/upload.component.html
+++ b/src/app/pages/upload/upload.component.html
@@ -1,1 +1,7 @@
-<p>upload here me....</p>
+<button class="btn btn-danger btn-md-9" onclick="uploadjs()">upload ready</button>
+
+<!-- -----------NEW FORM VALIDATION--------------------------------- -->
+
+
+
+
