--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -42,88 +42,84 @@
   <div class="card text-white bg-secondary mb-3" style="max-width: 35rem">
     <div class="card-header text-center bg-dark">Check Availavility..</div>
     <div class="card-body">
-
-          <form action="#" class="form container-fluid"  onsubmit="return validation()">
-            <div class="mb-3">
-              <label  class="form-label">User Name</label>
-              <input type="text"  class="form-control" name="user" id="user" autocomplete="off"/>
-              <span id="username" class="text-danger font-weight-normal"> </span>
-            </div>
-
-            <div class="mb-3">
-              <label  class="form-label"
-                >Password</label
-              >
-              <input
-                type="text"
-
-                class="form-control"
-                name="pass"
-                id="pass"
-                autocomplete="off"
-              />
-              <span id="passwords" class="text-danger font-weight-normal"> </span>
-            </div>
-
-            <div class="mb-3">
-              <label  class="form-label"
-                >Confirm Password</label
-              >
-              <input
-                type="text"
-
-                class="form-control"
-                name="conpass"
-                id="conpass"
-                autocomplete="off"
-              />
-            </div>
-            <span id="confrmpass" class="text-danger font-weight-normal"> </span>
-
-            <div class="mb-3">
-              <label  class="form-label"
-                >Contect Number</label
-              >
-              <input
-                type="text"
-
-                class="form-control"
-                name="mobile"
-                id="mobileNumber"
-              />
-              <span id="mobileno" class="text-danger font-weight-normal"> </span>
-            </div>
-
-            <div class="mb-3">
-              <label  class="form-label"
-                >Email Address</label
-              >
-              <input
-                type="text"
-                class="form-control"
-
-                aria-describedby="emailHelp"
-                name="email"
-                id="email"
-              />
-              <span id="emailids" class="text-danger font-weight-normal"> </span>
-              <div class="form-txt" id="emailHelp">
-                We'll never share your email with anyone else.
-              </div>
-            </div>
-            <input type="submit" name="submit" class="btn btn-success" autocomplete="off" value="submit"/>
-          </form>
+      <form
+        action="#"
+        class="form container-fluid"
+        onsubmit="return validation()"
+      >
+        <div class="mb-3">
+          <label class="form-label">User Name</label>
+          <input
+            type="text"
+            class="form-control"
+            name="user"
+            id="user"
+            autocomplete="off"
+          />
+          <span id="username" class="text-danger font-weight-normal"> </span>
         </div>
 
-        <button onclick="headerjs()" class="btn btn-primary">
-          sugn-up page....
-        </button>
-      </div>
+        <div class="mb-3">
+          <label class="form-label">Password</label>
+          <input
+            type="text"
+            class="form-control"
+            name="pass"
+            id="pass"
+            autocomplete="off"
+          />
+          <span id="passwords" class="text-danger font-weight-normal"> </span>
+        </div>
 
+        <div class="mb-3">
+          <label class="form-label">Confirm Password</label>
+          <input
+            type="text"
+            class="form-control"
+            name="conpass"
+            id="conpass"
+            autocomplete="off"
+          />
+        </div>
+        <span id="confrmpass" class="text-danger font-weight-normal"> </span>
 
+        <div class="mb-3">
+          <label class="form-label">Contect Number</label>
+          <input
+            type="text"
+            class="form-control"
+            name="mobile"
+            id="mobileNumber"
+          />
+          <span id="mobileno" class="text-danger font-weight-normal"> </span>
+        </div>
+
+        <div class="mb-3">
+          <label class="form-label">Email Address</label>
+          <input
+            type="text"
+            class="form-control"
+            aria-describedby="emailHelp"
+            name="email"
+            id="email"
+          />
+          <span id="emailids" class="text-danger font-weight-normal"> </span>
+          <div class="form-txt" id="emailHelp">
+            We'll never share your email with anyone else.
+          </div>
+        </div>
+        <input
+          type="submit"
+          name="submit"
+          class="btn btn-success"
+          autocomplete="off"
+          value="submit"
+        />
+      </form>
+    </div>
+
+    <button onclick="headerjs()" class="btn btn-primary">
+      sugn-up page....
+    </button>
+  </div>
 </header>
-
-
-
-
-
